force-app/main/default/objects/Account/fields/Change_1__c.field-meta.xml
<CustomField>
    <fullName>Change_1__c</fullName>
    <label>Change 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>