force-app/main/default/objects/Account/fields/Change_2__c.field-meta.xml
<CustomField>
    <fullName>Change_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change 2</label>
    <type>Checkbox</type>
</CustomField>