force-app/main/default/objects/Account/fields/Favorite_Copado_Feature__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Copado_Feature__c</fullName>
    <label>Favorite Copado Feature</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pipeline Builder</fullName>
            </value>
            <value>
                <fullName>User Stories</fullName>
            </value>
            <value>
                <fullName>Quality Gates</fullName>
            </value>
            <value>
                <fullName>Promotions and Back Promotions</fullName>
            </value>
            <value>
                <fullName>Static Code Analysis (PMD)</fullName>
            </value>
            <value>
                <fullName>Compliance Scanning</fullName>
            </value>
            <value>
                <fullName>Git Snapshot / Version Control</fullName>
            </value>
            <value>
                <fullName>Robotic Test Automation (CRT)</fullName>
            </value>
            <value>
                <fullName>Apex Test Execution</fullName>
            </value>
            <value>
                <fullName>Environment Sync</fullName>
            </value>
            <value>
                <fullName>Conflict Resolution</fullName>
            </value>
            <value>
                <fullName>Org Intelligence (AI)</fullName>
            </value>
            <value>
                <fullName>Agentia Agents</fullName>
            </value>
            <value>
                <fullName>Sprint Wall / Agile Planning</fullName>
            </value>
            <value>
                <fullName>Value Stream Map</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>