force-app/main/default/objects/Account/fields/High_Touch_Account__c.field-meta.xml
<CustomField>
    <fullName>High_Touch_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the account requires white-glove support and executive attention from Customer Success.</description>
    <label>High Touch Account</label>
    <type>Checkbox</type>
</CustomField>