force-app/main/default/objects/Account/fields/High_Value_Customer__c.field-meta.xml
<CustomField>
    <fullName>High_Value_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flags accounts with Annual Recurring Revenue over $100,000 as high-value customers</description>
    <inlineHelpText>Check this box if the account ARR exceeds $100,000</inlineHelpText>
    <label>High Value Customer</label>
    <type>Checkbox</type>
</CustomField>