force-app/main/default/objects/Account/fields/Next_QBR_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_QBR_Date__c</fullName>
    <description>Stores the date of the next Quarterly Business Review for this account.</description>
    <inlineHelpText>Enter the date of the next scheduled QBR with this account.</inlineHelpText>
    <label>Next QBR Date</label>
    <type>Date</type>
</CustomField>