force-app/main/default/objects/Account/fields/Renewal_Risk__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Risk__c</fullName>
    <label>Renewal Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>